Making center Every texts

--- a/views/result.html
+++ b/views/result.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <head>
-  <title class="text-center" style="text-align: center;">Your Search Results</title>
+  <title >Your Search Results</title>
 
 </head>
   <style type="text/css">
@@ -17,7 +17,7 @@
 }
   </style>
 <body>
-<h3>Your Search Results</h3>
+<h3 class="text-center">Your Search Results</h3>
 <div class="container">
 <div class="list-group text-center">
 {% for docs in body %}
