--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,8 @@
 <body>
 <h3 class="text-center" style="text-align: center;">Your Search Results</h3>
 <div class="container">
+<a href="/api/v1/auth/sync" class="btn btn-info .btn-lg" role="button">Go To Sync</a>
+
 <form method="get" action="/api/v1/auth/search/{{docs.query}}" class="text-center" style="text-align: center;">
       <div class="form-group">
         <label>Enter The Keyword To search withing Mail</label>
