--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 
   </style>
 <body>
-<h3 class="text-center" style="text-align: center;">Your Search Results</h3>
+<h3 class="text-center" style="text-align: center;">Search With You Keywords</h3>
 <div class="container">
 <a href="/api/v1/auth/sync" class="btn btn-info .btn-lg" role="button">Go To Sync</a>
 
