Set Syncing Mails for 7 Days, 30 days will be huge

--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,9 @@
 <h3 class="text-center" style="text-align: center;">Search With You Keywords</h3>
 <div class="container">
 <a href="/api/v1/auth/sync" class="btn btn-info .btn-lg" role="button">Go To Sync</a>
-
+<br>
+<code>N.B:  30 days?? its a huge data, inted of that i have set 7 days for you.
+while You are Syncing you mails of 7 days, it may be a huge data, be patient while we are saving your data. Once Done, we will simply redirect you ! ;) </code>
 <form method="get" action="/api/v1/auth/search/{{docs.query}}" class="text-center" style="text-align: center;">
       <div class="form-group">
         <label>Enter The Keyword To search withing Mail</label>
